--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,7 +3,7 @@
     padding: 0px }
 
 body{font-family: 'Calibri',arial,helvetica;
-widht:1000px; hight:802px;}
+width:1000px; height:802px;}
 
 header{ width: 100%; 
     float: left; /* Psição dos botões header lado a lado do logo */
